# Comp390Project

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TRACING.md  multiNEXUS.md  study.md
.claude/: ralph-loop.local.md
.obsidian/: workspace.json
docs/: HANDOFF.md  HPC_PRIMER.md  MN5_NCCL_CONFIG.md  MULTIGPU_SCALING_PLAN.md  NSIGHT_GUIDE.md  PER_OP_VS_NEXUS.md  PI_BRIEFING.md  PI_PRESENTATION.md  PI_PRESENTATION_SLIDES.md  PI_REPORT.md  PRD.md  PRD_PRESENTATION_AND_HP_BERT.md  RALPH_LOOP_HANDOFF.md  RALPH_LOOP_PLAYBOOK.md  RESULTS_SUMMARY.md
docs/audits/: BUG-01_align_binaries_audit.md  BUG-02_bert_hp_audit.md  BUG-03_multi_gpu_framework_audit.md  BUG-04_nexus_eval_audit.md
docs/prd/: PRD-multiNEXUS-paper.md
docs/report/: main.tex
docs/runs/: RUN-FIX-BUILD-01_40424627.md  RUN-MEASURE-01_40418680.md  RUN-MEASURE-03_40418704.md  RUN-MEASURE-04-RETRY_40424704.md  RUN-MEASURE-04_40418716.md  RUN-PROFILE-01-FIXED_40426416.md  RUN-PROFILE-01-RETRY-2_40424677.md  RUN-PROFILE-01-RETRY_40420523.md  RUN-PROFILE-01_40417847.md  RUN-PROFILE-02_40417947.md  RUN-PROFILE-03_40418387.md  RUN-PROFILE-04_40418644.md
experiments/: RESULTS.md  plot_scaling.py
experiments/results/2026-03-29_l4_baseline-ops/: metadata.json  notes.md
experiments/results/2026-03-29_l4_baseline-ops/raw/: ckks_bench.txt  nccl_bandwidth.txt
experiments/results/template/: metadata.json  notes.md
notes/: gpu_acquisition_guide.md  log.md
paper/: Makefile  architecture_guide.md  code_study.tex  generate_figures.py  main.tex  paper.md  presentation.tex  progress_report.md  refs.bib
paper/figs_py/: _style.py  fig_per_op_alignment.py
paper/sections/: 01_abstract.md  02_introduction.md  03_background.md  04_identifying_nexus.md  05_strategies.md  06_per_op_typology.md  07_end_to_end.md  08_discussion.md  09_conclusion.md  appendix_a.md
profiling/: ncu_keyswitch_profile.sh  ncu_ntt_profile.sh  nsys_multigpu_keyswitch.sh  nsys_multigpu_profile.sh  nsys_profile.sh
scripts/: assemble_paper.sh  parse_llama_l38b_results.sh  sync_to_mn5.sh
scripts/aws/: launch_p4d_spot.sh  parallelcluster_config.yaml  setup_p4d_env.sh
scripts/mn5/: bert_e2e.sh  bert_matmul_real.sh  bert_ops_test.sh  build_mn5.sh  ncu_profile_bootstrap.sh  ncu_profile_bootstrap_inner.sh  ncu_profile_full_pipeline.sh  ncu_profile_matmul.sh  ncu_profile_nonlinear.sh  parse_ncu_summary.sh  parse_nexus_baseline.sh  run_paper_battery.sh  setup_mn5_env.sh  slurm_1node.sh  slurm_4node.sh  slurm_argmax_align.sh  slurm_argmax_mgpu_nsys.sh  slurm_argmax_smoke.sh  slurm_argmax_v30k.sh  slurm_argmax_v8192.sh  slurm_bert_12layer_dks.sh  slurm_bert_dks.sh  slurm_bert_encoder_multigpu.sh  slurm_bert_hp_12layer.sh  slurm_bert_hp_layer.sh  slurm_bert_hp_logN15_4node.sh  slurm_bert_hp_n32768.sh  slurm_bert_hp_n32768_4node.sh  slurm_bert_hp_nccl_smoke.sh  slurm_bert_hp_smoke.sh  slurm_bert_hp_throughput_16gpu.sh  slurm_bert_hp_throughput_4gpu.sh  slurm_bert_hp_unit_logN15.sh  slurm_bootstrap_align.sh  slurm_bootstrap_diagnose.sh  slurm_bootstrap_mgpu_align.sh  slurm_bootstrap_mgpu_nsys.sh  slurm_bootstrap_n65536.sh  slurm_dist_bootstrap.sh  slurm_dks_bootstrap.sh  (+49 more)
scripts/mn5/nexus_patches/: CMakeLists.txt
scripts/regression/: README.md  baselines.json  result_aggregator.py  run_correctness.sh  run_perf.sh  saturation_check.py  slice_tracker.py  test_result_aggregator.py  test_saturation_check.py  test_slice_tracker.py
src/benchmarks/: README.md  argmax_align_n32k.cu  bert_connected_multigpu.cu  bert_connected_multinode.cu  bert_connected_pipeline.cu  bert_dks_multigpu.cu  bert_dks_multinode.cu  bert_e2e_inference.cu  bert_e2e_multigpu.cu  bert_encoder_layer.cu  bert_encoder_multigpu.cu  bert_encoder_multigpu_n65536.cu  bert_encoder_multinode.cu  bert_encoder_multinode_n65536.cu  bert_encoder_n65536.cu  bert_hp_multigpu.cu  bert_hp_multinode.cu  bert_inference.cu  bert_layer_scaling.cu  bert_matmul_pipeline.cu  bert_matmul_real.cu  bert_multinode.cu  bert_multinode_e2e.cu  bert_ops_test.cu  bootstrap_align_n32k.cu  bootstrap_align_pipeline.cu  bootstrap_diagnose.cu  bootstrap_distkey_test.cu  bootstrap_mgpu_align.cu  bootstrap_n65536_streaming.cu  bootstrap_test.cu  bootstrap_test_n65536.cu  bootstrapping_bench.cu  ct_pipeline_bench.cu  dist_bert_layer_bench.cu  dist_bootstrap_bench.cu  gelu_align_n65k.cu  gelu_mgpu_align.cu  ks_breakdown_bench.cu  layernorm_align_n65k.cu  (+20 more)
src/multi_gpu/: distributed_context.cu  distributed_context.cuh  distributed_eval.cu  distributed_eval.cuh  nvtx_ranges.cuh
src/multi_gpu/comm/: nccl_comm.cu  nccl_comm.cuh
src/multi_gpu/keyswitching/: dist_galois_key_store.cuh  galois_oa.cu  galois_oa.cuh  input_broadcast.cu  input_broadcast.cuh  output_aggregation.cu  output_aggregation.cuh
src/multi_gpu/overlap/: stream_manager.cu  stream_manager.cuh
src/multi_gpu/partition/: rns_partition.cu  rns_partition.cuh
src/multi_gpu/pipeline/: ct_pipeline.cu  ct_pipeline.cuh  multi_node_pipeline.cu  multi_node_pipeline.cuh
src/nexus_eval/: ckks_evaluator.cu  ckks_evaluator.cuh  galois_key_store.cuh  gelu.cu  gelu.cuh  layer_norm.cu  layer_norm.cuh  matrix_mul.cu  matrix_mul.cuh  softmax.cu  softmax.cuh  utils.cuh
src/nexus_eval/bootstrapping/: Bootstrapper.cu  Bootstrapper.cuh  ModularReducer.cu
src/nexus_eval/bootstrapping/common/: Choosemax.cu  Choosemax.cuh  MinicompFunc.cu  MinicompFunc.cuh  MinicompRemez.cu  MinicompRemez.cuh  Point.cu  Point.cuh  PolyUpdate.cu  PolyUpdate.cuh  Polynomial.cu  Polynomial.cuh  Remez.cu  Remez.cuh  RemezApp.cu  RemezApp.cuh  func.cu  func.cuh
src/util/: nvtx_tracer.cuh
